# sentinel

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  logclient.cpp  random_msg_publisher.cpp
monitor/: MainMonitor.h
net/: CMakeLists.txt  RedisComm.cpp  RedisComm.h  RedisReceiver.h
tests/: CMakeLists.txt  test_net_rediscomm.cpp  test_redis_conn.cpp  test_threads.cpp  test_utils.cpp
util/: StopWatch.h
